--- a/package.json
+++ b/package.json
@@ -1,43 +1,71 @@
 {
-  "name": "webpack",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "start": "serve dist",
-    "start:dev": "cross-env NODE_ENV=development webpack serve --mode development --env development",
-    "start:prod": "cross-env NODE_ENV=production webpack serve --mode production --env production",
-    "build": "webpack"
-  },
-  "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.13.8",
-    "@babel/preset-env": "^7.13.8",
-    "@babel/preset-react": "^7.12.13",
-    "@babel/preset-typescript": "^7.13.0",
-    "@types/node": "^14.14.31",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
-    "@types/styled-components": "^5.1.7",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^5.1.0",
-    "html-loader": "^2.1.1",
-    "html-webpack-plugin": "^5.2.0",
-    "mini-css-extract-plugin": "^1.3.9",
-    "node-sass": "^5.0.0",
-    "sass-loader": "^11.0.1",
-    "serve": "^11.3.2",
-    "style-loader": "^2.0.0",
-    "styled-components": "^5.2.1",
-    "terser-webpack-plugin": "^5.1.1",
-    "typescript": "^4.2.2",
-    "webpack": "^5.24.2",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
-  }
+    "name": "webpack",
+    "version": "1.0.0",
+    "main": "index.js",
+    "license": "MIT",
+    "scripts": {
+        "start": "serve dist",
+        "start:dev": "cross-env NODE_ENV=development webpack serve --mode development --env development",
+        "start:prod": "cross-env NODE_ENV=production webpack serve --mode production --env production",
+        "lint": "eslint 'src/**/*.{tsx, ts, jsx, js}'",
+        "lint:fix": "eslint --fix 'src/**/*.{tsx, ts, jsx, js}'",
+        "build": "webpack"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "dependencies": {
+        "@types/jest": "^26.0.20",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.13.8",
+        "@babel/preset-env": "^7.13.8",
+        "@babel/preset-react": "^7.12.13",
+        "@babel/preset-typescript": "^7.13.0",
+        "@types/node": "^14.14.31",
+        "@types/react": "^17.0.2",
+        "@types/react-dom": "^17.0.1",
+        "@types/styled-components": "^5.1.7",
+        "@typescript-eslint/eslint-plugin": "^4.16.1",
+        "@typescript-eslint/parser": "^4.16.1",
+        "babel-loader": "^8.2.2",
+        "clean-webpack-plugin": "^3.0.0",
+        "cross-env": "^7.0.3",
+        "css-loader": "^5.1.0",
+        "eslint": "^7.21.0",
+        "eslint-config-prettier": "^8.1.0",
+        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-react": "^7.22.0",
+        "html-loader": "^2.1.1",
+        "html-webpack-plugin": "^5.2.0",
+        "mini-css-extract-plugin": "^1.3.9",
+        "node-sass": "^5.0.0",
+        "prettier": "^2.2.1",
+        "sass-loader": "^11.0.1",
+        "serve": "^11.3.2",
+        "style-loader": "^2.0.0",
+        "styled-components": "^5.2.1",
+        "terser-webpack-plugin": "^5.1.1",
+        "typescript": "^4.2.2",
+        "webpack": "^5.24.2",
+        "webpack-cli": "^4.5.0",
+        "webpack-dev-server": "^3.11.2"
+    }
 }
